--- a/css/main.css
+++ b/css/main.css
@@ -70,3 +70,22 @@ body {
   top: 30%;
   left: 8%;
   color: white; }
+
+/*---------------FOOTER-------------------*/
+.footer {
+  position: relative;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #f1ede9;
+  margin-top: 10px; }
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center; }
+
+.copyright-div {
+  text-align: center; }
+
+.mediaIcon {
+  height: 30px;
+  margin: 5px; }
