--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,17 @@ body {
 .hero-container {
   position: relative;
   width: 100%;
-  height: 400px;
-  background-image: url(/images/candleFlower.jpg);
-  background-size: cover;
+  height: 600px;
   font-family: 'Open Sans', sans-serif; }
+
+.image-container {
+  height: 100%;
+  width: 100%; }
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; }
 
 .hero-text {
   position: absolute;
