--- a/sass/global.scss
+++ b/sass/global.scss
@@ -38,13 +38,26 @@ body {
     color: rgb(143, 140, 140);
     cursor: pointer;
 }
+
+
 .hero-container {
     position: relative;
     width: 100%;
-    height: 400px;
-    background-image: url(/images/candleFlower.jpg);
-    background-size: cover;
+    height: 600px;
+   // background-image: url(/images/candleFlower.jpg);
+   // background-size: cover;
     font-family: 'Open Sans', sans-serif;
+}
+
+.image-container{
+    height: 100%;
+    width: 100%;  
+}
+
+.gallery-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .hero-text {
