--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ body {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image: url(/images/candleFlower.jpg);
+  background-image: url("./images/candleFlower.jpg");
   background-size: cover;
   font-family: 'Open Sans', sans-serif; }
 
@@ -56,12 +56,12 @@ body {
   margin-top: 10px; }
 
 .left {
-  background-image: url(/images/bulb.jpg);
+  background-image: url("./images/bulb.jpg");
   background-size: cover;
   background-position: center; }
 
 .right {
-  background-image: url(/images/candleHand.jpg);
+  background-image: url("./images/candleHand.jpg");
   background-size: cover;
   background-position: center; }
 
