--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,67 @@ body {
   display: flex;
   align-items: center;
   position: absolute;
-  left: 5px; }
+  left: 5px;
+  justify-content: center; }
+
+.header-text h2 {
+  font-size: 3vw; }
 
 .logo {
-  height: 3em; }
+  height: 6vw; }
+
+.menu-button {
+  background-color: #000000;
+  padding: 2vw;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 6vw;
+  height: 6vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; }
+
+.link {
+  background-color: white;
+  width: 2vw;
+  height: 0.2vw; }
+
+.dropdown-menu {
+  position: absolute;
+  left: 5px;
+  display: none;
+  font-family: 'Open Sans', sans-serif; }
+
+@media screen and (max-width: 660px) {
+  .dropdown-menu {
+    display: inline-block; }
+  .topLink {
+    display: none; }
+  .header-text {
+    position: relative; }
+  .header {
+    justify-content: center; } }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1; }
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block; }
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1; }
+
+.dropdown-menu:hover .dropdown-content {
+  display: block; }
 
 .topLink {
   margin: 15px; }
@@ -30,6 +87,16 @@ body {
 .topLink:hover {
   color: #8f8c8c;
   cursor: pointer; }
+
+.cart-container {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 5px;
+  justify-content: center; }
+
+.cart {
+  height: 4vw; }
 
 .hero-container {
   position: relative;
