--- a/sass/global.scss
+++ b/sass/global.scss
@@ -12,7 +12,7 @@ body {
     position: relative;
     display: flex;
     width: 100%;
-    height: 60px;
+    height: 7vw;
     color: rgb(5, 5, 5);
     justify-content: center;
     align-items: center;
@@ -104,6 +104,8 @@ body {
 
 .topLink {
    margin: 15px;
+   text-decoration: none;
+   color: black;
 }
 
 .topLink:hover {
@@ -112,7 +114,6 @@ body {
 }
 
 .cart-container {
-
     display: flex;
     align-items: center;
     position: absolute;
@@ -121,10 +122,14 @@ body {
 
 }
 
-.cart {
+.icons {
     height: 4vw;
-
 }
+
+.cart-button:hover {
+    cursor: pointer;
+}
+
 .hero-container {
     position: relative;
     width: 100%;
@@ -171,4 +176,34 @@ body {
     left: 8%;
     color: white;
 }
+
+// varukorg
+
+
+h2 {
+   text-align: center;
+}
+
+
+
+main {
+    background-color: rgb(243, 243, 243);
+}
+
+.cart-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5vw;
+    }
+    
+
+.cart-box {
+    width: 60vw;
+    height: 30vw;
+    background-color: white;
+}
+
+
 
