--- a/css/main.css
+++ b/css/main.css
@@ -5,30 +5,16 @@
 body {
   margin: 0px; }
 
-:root {
-  --white-light: rgba 255, 255, 255, 0, 5;
-  --linen: #f3eae2;
-  --almond: #f0e0d1;
-  --desert-sand: #e7ccb1;
-  --tan: #c7ab94;
-  --antique-brass: #c69c80;
-  --cafe-au-lait: #b88665;
-  --gray: #ededed; }
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box; }
-
 .header {
   position: relative;
   display: flex;
   width: 100%;
+  height: 7vw;
   height: 60px;
   color: #050505;
   justify-content: center;
   align-items: center;
-  font-family: "Open Sans", sans-serif; }
+  font-family: 'Open Sans', sans-serif; }
 
 .header-text {
   display: flex;
@@ -99,8 +85,7 @@ body {
 .topLink {
   margin: 15px;
   text-decoration: none;
-  color: black; 
-  left: 5px; }
+  color: black; }
 
 .logo {
   height: 3em; }
@@ -130,6 +115,7 @@ body {
   width: 100%;
   height: 400px;
   background-image: url("./images/candleFlower.jpg");
+  background-image: url(/images/candleFlower.jpg);
   background-size: cover;
   font-family: 'Open Sans', sans-serif; }
 
@@ -151,11 +137,13 @@ body {
 
 .left {
   background-image: url("./images/bulb.jpg");
+  background-image: url(/images/bulb.jpg);
   background-size: cover;
   background-position: center; }
 
 .right {
   background-image: url("./images/candleHand.jpg");
+  background-image: url(/images/candleHand.jpg);
   background-size: cover;
   background-position: center; }
 
@@ -221,6 +209,48 @@ main {
   padding: 20px;
   border: 1px solid #888;
   width: 80%; }
+
+:root {
+  --white-light: rgba 255, 255, 255, 0, 5;
+  --linen: #f3eae2;
+  --almond: #f0e0d1;
+  --desert-sand: #e7ccb1;
+  --tan: #c7ab94;
+  --antique-brass: #c69c80;
+  --cafe-au-lait: #b88665;
+  --gray: #ededed; }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
+.header {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 60px;
+  color: #050505;
+  justify-content: center;
+  align-items: center;
+  font-family: "Open Sans", sans-serif; }
+
+.header-text {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 5px; }
+
+.logo {
+  height: 3em; }
+
+.topLink {
+  margin: 15px; }
+
+.topLink:hover {
+  color: #8f8c8c;
+  cursor: pointer; }
+
 body {
   font-family: "Quicksand", sans-serif; }
 
@@ -289,7 +319,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%; }
+  width: 150px; }
 
 .btn-wish {
   padding: 0.8rem 0;
@@ -377,7 +407,10 @@ img {
 @media screen and (min-width: 748px) {
   .product-items {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); } }
+    grid-template-columns: repeat(2, 1fr); }
+  .product-btns {
+    display: flex;
+    width: 300px; } }
 
 @media screen and (min-width: 1336px) {
   .product-items {
