--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,500;1,700&display=swap");
 * {
-  box-sizing: border-box; 
-  padding: 0;
-  margin: 0;}
+  box-sizing: border-box; }
 
 body {
-  font-family: "Quicksand", sans-serif; }
-
-:root {
-  --white-light: rgba 255, 255, 255, 0, 5;
-  --linen: #f3eae2;
-  --almond: #f0e0d1;
-  --desert-sand: #e7ccb1;
-  --tan: #c7ab94;
-  --antique-brass: #c69c80;
-  --cafe-au-lait: #b88665;
-  --gray: #ededed; }
+  margin: 0px; }
 
 .header {
   position: relative;
   display: flex;
   width: 100%;
-  height: 60px;
+  height: 8vw;
   color: #050505;
   justify-content: center;
   align-items: center;
-  font-family: "Open Sans", sans-serif; }
+  font-family: 'Open Sans', sans-serif; }
 
 .header-text {
   display: flex;
@@ -96,8 +84,7 @@ body {
 .topLink {
   margin: 15px;
   text-decoration: none;
-  color: black; 
-  left: 5px; }
+  color: black; }
 
 .topLink:hover {
   color: #8f8c8c;
@@ -119,13 +106,7 @@ body {
 .hero-container {
   position: relative;
   width: 100%;
-<<<<<<< HEAD
-  height: 400px;
-  background-image: url("./images/candleFlower.jpg");
-  background-size: cover;
-=======
   height: 600px;
->>>>>>> unsplash
   font-family: 'Open Sans', sans-serif; }
 
 .image-container {
@@ -154,12 +135,12 @@ body {
   margin-top: 10px; }
 
 .left {
-  background-image: url("./images/bulb.jpg");
+  background-image: url(/images/bulb.jpg);
   background-size: cover;
   background-position: center; }
 
 .right {
-  background-image: url("./images/candleHand.jpg");
+  background-image: url(/images/candleHand.jpg);
   background-size: cover;
   background-position: center; }
 
@@ -226,8 +207,24 @@ main {
   border: 1px solid #888;
   width: 80%; }
 
+:root {
+  --white-light: rgba 255, 255, 255, 0, 5;
+  --linen: #f3eae2;
+  --almond: #f0e0d1;
+  --desert-sand: #e7ccb1;
+  --tan: #c7ab94;
+  --antique-brass: #c69c80;
+  --cafe-au-lait: #b88665;
+  --gray: #ededed; }
 
-/*---------------PRODUCT PAGE START---------------*/
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
+body {
+  font-family: "Quicksand", sans-serif; }
+
 .products-container {
   width: 88vw;
   margin: 0 auto; }
@@ -264,6 +261,7 @@ main {
   opacity: 0.5;
   margin: auto; }
 
+/* Product section */
 .products {
   background-color: var(--linen);
   padding: 3.2rem 0; }
@@ -288,7 +286,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%; }
+  width: 150px; }
 
 .btn-wish {
   padding: 0.8rem 0;
@@ -376,11 +374,12 @@ main {
 @media screen and (min-width: 748px) {
   .product-items {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); } }
+    grid-template-columns: repeat(2, 1fr); }
+  .product-btns {
+    display: flex;
+    width: 300px; } }
 
 @media screen and (min-width: 1336px) {
   .product-items {
     display: grid;
     grid-template-columns: repeat(3, 1fr); } }
-
-/*---------------PRODUCT PAGE END---------------*/
