--- a/sass/global.scss
+++ b/sass/global.scss
@@ -12,8 +12,8 @@ body {
     position: relative;
     display: flex;
     width: 100%;
-    height: 7vw;
-    color: rgb(5, 5, 5);
+    height: 8vw;
+    color: rgb(5,5,5);
     justify-content: center;
     align-items: center;
     font-family: 'Open Sans', sans-serif;
@@ -34,7 +34,6 @@ body {
     height: 6vw;
 }
 
-
 .menu-button {
     background-color: #000000;
     padding: 2vw;
@@ -46,13 +45,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-  }
+}
 
-  .link {
-      background-color: white;
-      width: 2vw;
-      height: 0.2vw;
-  }
+.link {
+    background-color: white;
+    width: 2vw;
+    height: 0.2vw;
+}
 
 .dropdown-menu {
     position:absolute;
@@ -61,7 +60,7 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-@media screen and (max-width: 660px) {
+@media screen and (max-width: 660px){
     .dropdown-menu {
       display: inline-block;
     }
@@ -75,7 +74,7 @@ body {
     .header{
         justify-content: center;
     }
-  }
+}
 
 .dropdown-content {
     display: none;
@@ -87,20 +86,19 @@ body {
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown-menu:hover .dropdown-content {
     display: block;
-  }
-
-  .dropdown-content a:hover {
-      background-color: #f1f1f1;
-  }
-
-  .dropdown-menu:hover .dropdown-content {
-      display: block;
-  }
-
+}
 
 .topLink {
    margin: 15px;
@@ -119,7 +117,6 @@ body {
     position: absolute;
     right: 5px;
     justify-content: center;
-
 }
 
 .icons {
@@ -134,8 +131,6 @@ body {
     position: relative;
     width: 100%;
     height: 600px;
-   // background-image: url(/images/candleFlower.jpg);
-   // background-size: cover;
     font-family: 'Open Sans', sans-serif;
 }
 
