--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,500;1,700&display=swap");
 * {
-  box-sizing: border-box; }
-
-body {
+  box-sizing: border-box;
   margin: 0px; }
 
 .header {
@@ -152,7 +150,6 @@ body {
 .footer {
   position: relative;
   font-family: 'Open Sans', sans-serif;
-  background-color: #f1ede9;
   margin-top: 10px; }
 
 .footer-container {
@@ -167,11 +164,8 @@ body {
   height: 30px;
   margin: 5px; }
 
-h2 {
-  text-align: center; }
-
 main {
-  background-color: #f3f3f3; }
+  background-color: #f3eae2; }
 
 .cart-flex {
   display: flex;
@@ -214,11 +208,6 @@ main {
   --antique-brass: #c69c80;
   --cafe-au-lait: #b88665;
   --gray: #ededed; }
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box; }
 
 body {
   font-family: "Quicksand", sans-serif; }
@@ -381,3 +370,111 @@ body {
   .product-items {
     display: grid;
     grid-template-columns: repeat(3, 1fr); } }
+
+/*---------------------Contact page----------------------*/
+.contactPage {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5vw;
+  color: #705b5b; }
+
+.contactPageContainer {
+  max-width: 1100px;
+  width: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  padding: 10px; }
+
+.contact-h3,
+.contact-h2,
+.contact-Text {
+  padding-bottom: 2rem; }
+
+.aboutContainer {
+  width: 100%;
+  margin: auto;
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  box-sizing: border-box; }
+
+.contactSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: "Open Sans", sans-serif;
+  gap: 4vw; }
+
+.formContainer {
+  font-family: "Open Sans", sans-serif;
+  width: 100%;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 5px;
+  margin-top: 15%; }
+
+.input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box; }
+
+.input:invalid {
+  border: 3px solid red; }
+
+.inputSubmit:hover {
+  background-color: #817f76; }
+
+.inputSubmit {
+  width: 100%;
+  background-color: #8f8c8c;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer; }
+
+#contactForm-h2 {
+  text-align: center; }
+
+.submitted {
+  padding: 12px 20px;
+  margin: 8px 0;
+  color: red; }
+
+#massageInputfield {
+  height: 200px; }
+
+.contactContainer {
+  width: 100%;
+  text-align: left; }
+
+/*-----------------------MEDIA QUERIES--------------------------------*/
+@media screen and (min-width: 600px) {
+  .contactPage {
+    background-color: #f3eae2;
+    padding-bottom: 30px; }
+  .contactPageContainer {
+    max-width: 1100px;
+    width: 80vw;
+    background-color: white;
+    padding: 30px; }
+  .aboutContainer {
+    width: 70%;
+    padding-bottom: 10%;
+    padding-top: 10%; }
+  .contactSection {
+    flex-direction: row;
+    width: 100%;
+    margin: auto; }
+  .contactContainer {
+    padding: 20px; }
+  .formContainer {
+    max-width: 450px;
+    margin: auto;
+    padding: 20px; } }
