--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -1,3 +1,7 @@
 $bgImage: "./images/candleFlower.jpg";
 $leftImage: "./images/bulb.jpg";
 $rightImage: "./images/candleHand.jpg";
+$main-text: 'Open Sans', sans-serif;
+
+$mainColor-linen: #f3eae2; 
+$mainTextColor: #705b5b;
