--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,500;1,700&display=swap");
 * {
-  box-sizing: border-box; 
-  padding: 0;
-  margin: 0;}
+  box-sizing: border-box; }
 
 body {
-  font-family: "Quicksand", sans-serif; }
-
-:root {
-  --white-light: rgba 255, 255, 255, 0, 5;
-  --linen: #f3eae2;
-  --almond: #f0e0d1;
-  --desert-sand: #e7ccb1;
-  --tan: #c7ab94;
-  --antique-brass: #c69c80;
-  --cafe-au-lait: #b88665;
-  --gray: #ededed; }
+  margin: 0px; }
 
 .header {
   position: relative;
@@ -25,7 +13,7 @@ body {
   color: #050505;
   justify-content: center;
   align-items: center;
-  font-family: "Open Sans", sans-serif; }
+  font-family: 'Open Sans', sans-serif; }
 
 .header-text {
   display: flex;
@@ -96,8 +84,13 @@ body {
 .topLink {
   margin: 15px;
   text-decoration: none;
-  color: black; 
-  left: 5px; }
+  color: black; }
+
+.logo {
+  height: 3em; }
+
+.topLink {
+  margin: 15px; }
 
 .topLink:hover {
   color: #8f8c8c;
@@ -120,7 +113,7 @@ body {
   position: relative;
   width: 100%;
   height: 400px;
-  background-image: url("./images/candleFlower.jpg");
+  background-image: url(/images/candleFlower.jpg);
   background-size: cover;
   font-family: 'Open Sans', sans-serif; }
 
@@ -141,12 +134,12 @@ body {
   margin-top: 10px; }
 
 .left {
-  background-image: url("./images/bulb.jpg");
+  background-image: url(/images/bulb.jpg);
   background-size: cover;
   background-position: center; }
 
 .right {
-  background-image: url("./images/candleHand.jpg");
+  background-image: url(/images/candleHand.jpg);
   background-size: cover;
   background-position: center; }
 
@@ -160,7 +153,7 @@ body {
 .footer {
   position: relative;
   font-family: 'Open Sans', sans-serif;
-  background-color: #f1ede9;
+  background-color: #fff;
   margin-top: 10px; }
 
 .footer-container {
@@ -213,8 +206,24 @@ main {
   border: 1px solid #888;
   width: 80%; }
 
+:root {
+  --white-light: rgba 255, 255, 255, 0, 5;
+  --linen: #f3eae2;
+  --almond: #f0e0d1;
+  --desert-sand: #e7ccb1;
+  --tan: #c7ab94;
+  --antique-brass: #c69c80;
+  --cafe-au-lait: #b88665;
+  --gray: #ededed; }
 
-/*---------------PRODUCT PAGE START---------------*/
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
+body {
+  font-family: "Quicksand", sans-serif; }
+
 .products-container {
   width: 88vw;
   margin: 0 auto; }
@@ -251,6 +260,7 @@ main {
   opacity: 0.5;
   margin: auto; }
 
+/* Product section */
 .products {
   background-color: var(--linen);
   padding: 3.2rem 0; }
@@ -258,6 +268,7 @@ main {
 .product {
   margin: 2rem;
   position: relative;
+  display: none;
   width: 300px; }
 
 .products-content {
@@ -274,19 +285,26 @@ main {
 .product-btns {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 100%; }
+  justify-content: center; }
+
+.btn-cart,
+.btn-buy {
+  padding: 0.8rem 0;
+  width: 100%;
+  height: 50px;
+  margin-top: 2px;
+  text-transform: uppercase;
+  cursor: pointer;
+  border: none;
+  transition: all 0.6s ease; }
 
 .btn-wish {
   padding: 0.8rem 0;
   width: 40px;
-  height: 40px;
+  height: 43px;
   font-size: 20px;
-  font-family: inherit;
-  text-transform: uppercase;
   border: none;
   transition: all 0.6s ease;
-  display: inline-block;
   background: transparent;
   position: absolute;
   top: 0;
@@ -294,25 +312,28 @@ main {
   cursor: default; }
 
 .btn-cart,
-.btn-buy {
+.btn-buy,
+.btn-load {
+  background: var(--tan);
+  color: white; }
+
+.btn-cart:hover,
+.btn-buy:hover,
+.btn-load:hover {
+  background: white;
+  color: black; }
+
+.btn-load {
+  justify-content: center;
   padding: 0.8rem 0;
+  width: 8%;
+  margin-left: 45vw;
   display: inline-block;
-  width: 50%;
   text-transform: uppercase;
   cursor: pointer;
   border: none;
   transition: all 0.6s ease;
   margin-top: 3px; }
-
-.btn-cart,
-.btn-buy {
-  background: var(--tan);
-  color: white; }
-
-.btn-cart:hover,
-.btn-buy:hover {
-  background: white;
-  color: black; }
 
 .btn-wish:hover {
   color: #fff; }
@@ -363,11 +384,12 @@ main {
 @media screen and (min-width: 748px) {
   .product-items {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); } }
+    grid-template-columns: repeat(2, 1fr); }
+  .product-btns {
+    display: flex;
+    width: 300px; } }
 
 @media screen and (min-width: 1336px) {
   .product-items {
     display: grid;
     grid-template-columns: repeat(3, 1fr); } }
-
-/*---------------PRODUCT PAGE END---------------*/
