--- a/sass/global.scss
+++ b/sass/global.scss
@@ -191,7 +191,7 @@ body {
 .footer{
     position: relative;
     font-family: 'Open Sans', sans-serif;
-    background-color: rgb(241, 237, 233);
+    background-color: #fff;
     margin-top: 10px;
 }
 
