--- a/sass/productpage 2.scss
+++ b/sass/productpage 2.scss
@@ -14,8 +14,42 @@
   box-sizing: border-box;
 }
 
+.header {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 60px;
+  color: rgb(5, 5, 5);
+  justify-content: center;
+  align-items: center;
+  font-family: "Open Sans", sans-serif;
+}
+
+.header-text {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 5px;
+}
+
+.logo {
+  height: 3em;
+}
+
+.topLink {
+  margin: 15px;
+}
+
+.topLink:hover {
+  color: rgb(143, 140, 140);
+  cursor: pointer;
+}
 body {
   font-family: "Quicksand", sans-serif;
+}
+img {
+  width: 100%;
+  display: block;
 }
 .products-container {
   width: 88vw;
@@ -63,7 +97,6 @@ body {
 .product {
   margin: 2rem;
   position: relative;
-  display: none;
   width: 300px;
 }
 .products-content {
@@ -81,27 +114,19 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 150px;
 }
-.btn-cart,
-.btn-buy {
-  padding: 0.8rem 0;
-  width: 100%;
-  height: 50px;
-  margin-top: 2px;
-  margin-bottom: 2px;
-  text-transform: uppercase;
-  cursor: pointer;
-  border: none;
-  transition: all 0.6s ease;
-  border: 1px solid violet;
-} 
+
 .btn-wish {
   padding: 0.8rem 0;
   width: 40px;
-  height: 43px;
+  height: 40px;
   font-size: 20px;
+  font-family: inherit;
+  text-transform: uppercase;
   border: none;
   transition: all 0.6s ease;
+  display: inline-block;
   background: transparent;
   position: absolute;
   top: 0;
@@ -109,29 +134,27 @@ body {
   cursor: default;
 }
 .btn-cart,
-.btn-buy,
-.btn-load {
-  background: var(--tan);
-  color: white;
-}
-.btn-cart:hover,
-.btn-buy:hover,
-.btn-load:hover {
-  background: white;
-  color: black;
-}
-.btn-load{
-  justify-content: center;
+.btn-buy {
   padding: 0.8rem 0;
-  width: 8%;
-  margin-left: 45vw;
   display: inline-block;
+  width: 50%;
   text-transform: uppercase;
   cursor: pointer;
   border: none;
   transition: all 0.6s ease;
   margin-top: 3px;
 }
+.btn-cart,
+.btn-buy {
+  background: var(--tan);
+  color: white;
+}
+.btn-cart:hover,
+.btn-buy:hover {
+  background: white;
+  color: black;
+}
+
 .btn-wish:hover {
   color: #fff;
 }
