--- a/sass/productpage.scss
+++ b/sass/productpage.scss
@@ -88,12 +88,10 @@ body {
   width: 100%;
   height: 50px;
   margin-top: 2px;
-  margin-bottom: 2px;
   text-transform: uppercase;
   cursor: pointer;
   border: none;
   transition: all 0.6s ease;
-  border: 1px solid violet;
 } 
 .btn-wish {
   padding: 0.8rem 0;
@@ -136,6 +134,7 @@ body {
   color: #fff;
 }
 .product-info {
+  margin-top: 2px;
   background: white;
   padding: 2rem;
 }
