--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -1,3 +1,11 @@
 $bgImage: "./images/candleFlower.jpg";
 $leftImage: "./images/bulb.jpg";
 $rightImage: "./images/candleHand.jpg";
+
+// Färger
+$white-light: rgba 255, 255, 255, 0, 5;
+$linen: #f3eae2;
+$sand: #e7ccb1;
+$tan: #c7ab94;
+$cafe: #b88665;
+$text: #747474
