Lagt till API koppling via Formspree

--- a/sass/contactpage.scss
+++ b/sass/contactpage.scss
@@ -54,16 +54,20 @@
 }
 
 .input {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.textarea{
+    font-family: $main-text;
 }
 
 .input:invalid{
-    border: 3px solid red;
+    background-color: rgb(224, 223, 223);
 }
 
 .inputSubmit:hover {
