--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -3,5 +3,11 @@ $leftImage: "./images/bulb.jpg";
 $rightImage: "./images/candleHand.jpg";
 $main-text: 'Open Sans', sans-serif;
 
+
+// Färger
+$mainColorBackground: #e7ccb1;
+$secondaryColor: #c7ab94;
+$titleColor: #b88665; 
+$text: #747474;
 $mainColor-linen: #f3eae2; 
 $mainTextColor: #705b5b;
