--- a/css/main.css
+++ b/css/main.css
@@ -199,15 +199,10 @@ main {
   border: 1px solid #888;
   width: 80%; }
 
-:root {
-  --white-light: rgba 255, 255, 255, 0, 5;
-  --linen: #f3eae2;
-  --almond: #f0e0d1;
-  --desert-sand: #e7ccb1;
-  --tan: #c7ab94;
-  --antique-brass: #c69c80;
-  --cafe-au-lait: #b88665;
-  --gray: #ededed; }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
 
 body {
   font-family: "Quicksand", sans-serif; }
@@ -228,7 +223,7 @@ body {
   font-weight: 500;
   text-align: center;
   padding: 1.3rem 0;
-  opacity: 0.5; }
+  color: #747474; }
 
 .md-title {
   font-size: 2rem;
@@ -245,21 +240,22 @@ body {
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.5;
-  opacity: 0.5;
+  color: #747474;
   margin: auto; }
 
 /* Product section */
 .products {
-  background-color: var(--linen);
+  background-color: #f3eae2;
   padding: 3.2rem 0; }
 
 .product {
   margin: 2rem;
   position: relative;
+  display: none;
   width: 300px; }
 
 .products-content {
-  background: var(--desert-sand);
+  background: #e7ccb1;
   padding: 3rem 0.5rem 2rem 0.5rem;
   cursor: pointer; }
 
@@ -280,11 +276,8 @@ body {
   width: 40px;
   height: 40px;
   font-size: 20px;
-  font-family: inherit;
-  text-transform: uppercase;
   border: none;
   transition: all 0.6s ease;
-  display: inline-block;
   background: transparent;
   position: absolute;
   top: 0;
@@ -294,28 +287,43 @@ body {
 .btn-cart,
 .btn-buy {
   padding: 0.8rem 0;
+  width: 100%;
+  height: 50px;
+  margin-top: 2px;
+  text-transform: uppercase;
+  cursor: pointer;
+  border: none;
+  transition: all 0.6s ease; }
+
+.btn-cart,
+.btn-buy,
+.btn-load {
+  background: #c7ab94;
+  color: white; }
+
+.btn-cart:hover,
+.btn-buy:hover,
+.btn-load:hover {
+  background: white;
+  color: black; }
+
+.btn-load {
+  justify-content: center;
+  padding: 0.8rem 0;
+  width: 8%;
+  margin-left: 45vw;
   display: inline-block;
-  width: 50%;
   text-transform: uppercase;
   cursor: pointer;
   border: none;
   transition: all 0.6s ease;
   margin-top: 3px; }
 
-.btn-cart,
-.btn-buy {
-  background: var(--tan);
-  color: white; }
-
-.btn-cart:hover,
-.btn-buy:hover {
-  background: white;
-  color: black; }
-
 .btn-wish:hover {
   color: #fff; }
 
 .product-info {
+  margin-top: 2px;
   background: white;
   padding: 2rem; }
 
@@ -325,7 +333,7 @@ body {
   align-items: center; }
 
 .product-name {
-  color: var(--cafe-au-lait);
+  color: #b88665;
   display: block;
   text-decoration: none;
   font-size: 1rem;
@@ -340,11 +348,11 @@ body {
 
 .product-price:first-of-type {
   text-decoration: line-through;
-  color: var(--cafe-au-lait);
+  color: #b88665;
   font-size: 0.95rem; }
 
 .off-info .sm-title {
-  background: var(--tan);
+  background: #c7ab94;
   color: white;
   display: inline-block;
   padding: 0.5rem;
