--- a/css/main.css
+++ b/css/main.css
@@ -7,24 +7,29 @@
   position: relative;
   display: flex;
   width: 100%;
-  height: 8vw;
-  color: #050505;
+  height: 5.7vw;
   justify-content: center;
-  align-items: center;
-  font-family: 'Open Sans', sans-serif; }
+  align-items: center; }
 
 .header-text {
   display: flex;
+  font-family: 'Playfair Display', serif;
   align-items: center;
   position: absolute;
   left: 5px;
   justify-content: center; }
 
 .header-text h2 {
-  font-size: 3vw; }
+  font-size: 3vw;
+  font-weight: 400;
+  color: #747474;
+  width: 290px;
+  letter-spacing: 3px; }
 
 .logo {
-  height: 6vw; }
+  height: 5vw;
+  margin-left: -12px;
+  margin-top: 10px; }
 
 .menu-button {
   background-color: #000000;
@@ -45,9 +50,10 @@
 
 .dropdown-menu {
   position: absolute;
-  left: 5px;
+  left: 65px;
   display: none;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+  border: 1px solid violet; }
 
 @media screen and (max-width: 660px) {
   .dropdown-menu {
@@ -80,11 +86,19 @@
   display: block; }
 
 .topLink {
-  margin: 15px; }
+  margin: 15px;
+  text-decoration: none;
+  color: #747474; }
+
+.topLink:link {
+  cursor: pointer; }
 
 .topLink:hover {
-  color: #8f8c8c;
-  cursor: pointer; }
+  cursor: pointer;
+  color: #c7ab94; }
+
+.topLink:active {
+  text-decoration: none; }
 
 .cart-container {
   display: flex;
@@ -96,14 +110,18 @@
 .icons {
   height: 4vw; }
 
+.action-buttons {
+  color: #747474;
+  margin: 7px;
+  font-size: 28px; }
+
 .cart-button:hover {
   cursor: pointer; }
 
 .hero-container {
   position: relative;
   width: 100%;
-  height: 600px;
-  font-family: 'Open Sans', sans-serif; }
+  height: 500px; }
 
 .image-container {
   height: 100%;
@@ -117,34 +135,59 @@
 .hero-text {
   position: absolute;
   top: 40%;
-  left: 8%; }
+  left: 8%;
+  color: white;
+  background-color: #f3eae2; }
 
 .card-container {
   display: flex;
   justify-content: space-between;
-  font-family: 'Open Sans', sans-serif; }
+  height: 320px; }
 
 .startCard {
   position: relative;
-  width: 49.5%;
-  height: 100px;
+  width: 49.8%;
+  height: 310px;
   margin-top: 10px; }
 
 .left {
-  background-image: url(/images/bulb.jpg);
+  background-image: url(/images/pyramidochknut.JPG);
   background-size: cover;
   background-position: center; }
 
 .right {
-  background-image: url(/images/candleHand.jpg);
+  background-image: url(/images/pastellbubblormini.JPG);
   background-size: cover;
-  background-position: center; }
+  background-attachment: fixed;
+  background-position: 470px -980px; }
 
 .card-text {
   position: absolute;
-  top: 30%;
-  left: 8%;
-  color: white; }
+  left: 3%;
+  width: 130px;
+  height: 140px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  color: white;
+  background-color: rgba(243, 234, 226, 0.3); }
+
+.card-text h4 {
+  position: relative;
+  left: 15px;
+  top: 7px;
+  font-size: 25px;
+  width: 100px;
+  text-align: center; }
+
+.card-text p {
+  color: white;
+  position: absolute;
+  font-size: 20px;
+  top: -30px;
+  left: -21px;
+  padding: 10px;
+  background-color: rgba(243, 234, 226, 0.3);
+  writing-mode: vertical-lr; }
 
 /*---------------FOOTER-------------------*/
 .footer {
