--- a/sass/global.scss
+++ b/sass/global.scss
@@ -3,7 +3,6 @@
 * {
     box-sizing: border-box;
     margin: 0px;
-  
 }
 
 
@@ -11,15 +10,14 @@
     position: relative;
     display: flex;
     width: 100%;
-    height: 8vw;
-    color: rgb(5,5,5);
+    height: 5.7vw;
     justify-content: center;
     align-items: center;
-    font-family: 'Open Sans', sans-serif;
 }
 
 .header-text {
     display: flex;
+    font-family: 'Playfair Display', serif;
     align-items: center;
     position: absolute;
     left: 5px;
@@ -27,13 +25,17 @@
 }
 .header-text h2 {
     font-size: 3vw;
+    font-weight: 400;
+    color: $text;
+    width: 290px;
+    letter-spacing: 3px;
 }
-
 .logo {
-    height: 6vw;
+    height: 5vw;
+    margin-left: -12px;
+    margin-top: 10px;
 }
-
-.menu-button {
+ .menu-button {
     background-color: #000000;
     padding: 2vw;
     border: none;
@@ -44,21 +46,19 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-}
-
-.link {
+} 
+ .link {
     background-color: white;
     width: 2vw;
     height: 0.2vw;
-}
-
-.dropdown-menu {
+} 
+ .dropdown-menu {
     position:absolute;
-    left: 5px;
+    left: 65px;
     display: none;
     font-family: 'Open Sans', sans-serif;
+    border: 1px solid violet;
 }
-
 @media screen and (max-width: 660px){
     .dropdown-menu {
       display: inline-block;
@@ -82,13 +82,12 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-}
-
+}   
 .dropdown-content a {
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
 .dropdown-content a:hover {
@@ -101,11 +100,22 @@ display: block;
 
 .topLink {
    margin: 15px;
+   text-decoration: none;
+   color: $text;
+
 }
- .topLink:hover {
-    color: rgb(143, 140, 140);
+.topLink:link{
     cursor: pointer;
 }
+
+.topLink:hover {
+    cursor: pointer;
+    color: $secondaryColor;
+}
+.topLink:active{
+    text-decoration: none;
+}
+
 
 .cart-container {
     display: flex;
@@ -114,20 +124,24 @@ display: block;
     right: 5px;
     justify-content: center;
 }
-
 .icons {
-    height: 4vw;
+    height: 4vw; 
 }
+.action-buttons{
+    color: $text;
+    margin: 7px;
+    font-size: 28px;
+}
+
 
 .cart-button:hover {
     cursor: pointer;
-}
+} 
 
 .hero-container {
     position: relative;
     width: 100%;
-    height: 600px;
-    font-family: 'Open Sans', sans-serif;
+    height: 500px;
 }
 
 .image-container{
@@ -145,38 +159,66 @@ display: block;
     position: absolute;
     top: 40%;
     left: 8%;
+    color: white;
+    background-color: rgb(243,234,226);
 }
 
 .card-container {
     display: flex;
     justify-content: space-between;
-    font-family: 'Open Sans', sans-serif;
+    height: 320px;
+    // font-family: 'Open Sans', sans-serif;
 }
 
 .startCard {
     position: relative;
-    width: 49.5%;
-    height: 100px;
+    width: 49.8%;
+    height: 310px;
     margin-top: 10px;
 }
 
 .left {
-    background-image: url(/images/bulb.jpg);
+    background-image: url(/images/pyramidochknut.JPG);
     background-size: cover;
     background-position: center;
 }
 
 .right {
-    background-image: url(/images/candleHand.jpg);
+    background-image: url(/images/pastellbubblormini.JPG);
     background-size: cover;
-    background-position: center;
+    background-attachment: fixed;
+    background-position: 470px -980px;
+    // background-position: 720px -300px;
 }
 
-.card-text {
+ .card-text {
     position: absolute;
-    top: 30%;
-    left: 8%;
+    left: 3%;
+    width: 130px;
+    height: 140px;
+    margin-bottom: 30px;
+    margin-top: 30px;
     color: white;
+    background-color: rgba(243,234,226, 0.3);
+}
+.card-text h4 {
+    position: relative;
+    left: 15px;
+    top: 7px;
+    font-size: 25px;
+    width: 100px;
+    text-align: center;
+} 
+
+.card-text p{
+    color: white;
+    position: absolute;
+    font-size: 20px;
+    top: -30px;
+    left: -21px;
+    padding: 10px;
+    background-color: rgba(243,234,226, 0.3);
+    writing-mode: vertical-lr;
 }
 
 
