--- a/css/main.css
+++ b/css/main.css
@@ -380,7 +380,7 @@ body {
     grid-template-columns: repeat(3, 1fr); } }
 
 /*---------------------Contact page----------------------*/
-.contactPage {
+.contactPage .wishlistPage{
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -389,7 +389,7 @@ body {
   padding-bottom: 5vw;
   color: #705b5b; }
 
-.contactPageContainer {
+.contactPageContainer .wishlistPageContainer {
   max-width: 1100px;
   width: 100%;
   margin-top: 5%;
