--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -1,7 +1,9 @@
-$bgImage: "./images/candleFlower.jpg";
-$leftImage: "./images/bulb.jpg";
-$rightImage: "./images/candleHand.jpg";
+$bgImage: url(./images/candleFlower.jpg);
+$leftImage: url(./images/pyramidochknut.jpg);
+$rightImage: url(./images/pastellbubblormini.jpg);
+$adminFormBG: url(./images/boxes.jpg);
 $main-text: 'Open Sans', sans-serif;
+
 
 $mainColor-linen: #f3eae2; 
 $mainTextColor: #705b5b;
