--- a/css/main.css
+++ b/css/main.css
@@ -569,3 +569,33 @@ body {
     max-width: 450px;
     margin: auto;
     padding: 20px; } }
+
+.wishlist-page {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5vw; }
+
+.wishlist-page-container {
+  max-width: 1100px;
+  width: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  padding: 10px; }
+
+.wlist-product {
+  border: 2px solid greenyellow; }
+
+/*-----------------------MEDIA QUERIES--------------------------------*/
+@media screen and (min-width: 600px) {
+  .wishlist-page {
+    background-color: #f3eae2;
+    padding-bottom: 30px; }
+  .wishlist-page-container {
+    max-width: 1100px;
+    width: 80vw;
+    background-color: white;
+    padding: 30px;
+    height: 400vw; } }
