--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -2,6 +2,9 @@ $bgImage: url(./images/candleFlower.jpg);
 $leftImage: url(./images/pyramidochknut.jpg);
 $rightImage: url(./images/pastellbubblormini.jpg);
 $adminFormBG: url(./images/boxes.jpg);
+$userIcon: url(./images/Id-Badge.png);
+$lockIcon: url(./images/Lock-Icon.png);
+
 $main-text: 'Open Sans', sans-serif;
 
 // Färger
