--- a/sass/login.scss
+++ b/sass/login.scss
@@ -1,3 +1,19 @@
+/*-----------------------Admin Login--------------------------------*/
+
+.admin-text {
+    margin-top: 8rem;
+    margin-bottom: 0.5rem;
+}
+  
+.admin-btn {
+    width: 150px;
+    background-color: rgb(143, 140, 140);
+    color: white;
+    padding: 10px 10px;
+    margin: 10px 0;
+    border-radius: 10px;
+}
+
 .modal {
     display: none;
     position: fixed;
@@ -13,9 +29,54 @@
 }
   
 .modal-content {
-    background-color: #fefefe;
+    background-color: #f3eae2;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 50%;
+    font-size: 25px;
+}
+
+#login-form {
+    align-self: flex-start;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
+.login-form-field {
+    width: 60%;
+    font-size: 18px;
+    margin-top: 1rem;
+    border-radius: 20px;
+    padding: 1rem;
+    background-color: lightyellow;
+}
+    
+#login-form-submit {
+    width: 60%;
+    margin-top: 1rem;
+    padding: 1rem;
+    border-radius: 20px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #c7ab94;
+    cursor: pointer;
+}
+
+#username-field {
+    background-image: $userIcon;
+    background-size: 25px;
+    background-position: 20px 10px; 
+    background-repeat: no-repeat;
+    padding-left: 55px;
+}
+  
+#password-field {
+    background-image: $lockIcon;
+    background-size: 25px;
+    background-position: 20px 10px; 
+    background-repeat: no-repeat;
+    padding-left: 55px;
 }
