--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,6 @@
 @import "./global.scss";
 @import "./login.scss";
 @import "./productpage.scss";
-@import "./contactpage.scss"
+@import "./contactpage.scss";
+@import "./purchase.scss";
 
