--- a/sass/global.scss
+++ b/sass/global.scss
@@ -238,8 +238,10 @@
 
 .footer{
     position: relative;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
     margin-top: 10px;
+    color: $text;
 }
 
 .footer-container{
