lagt till wishlist.scss

--- a/css/main.css
+++ b/css/main.css
@@ -576,26 +576,65 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 5vw; }
+  padding-bottom: 5vw;
+  transition: margin-left .5s;
+  padding: 16px; }
 
-.wishlist-page-container {
-  max-width: 1100px;
+.favorite-item {
+  border: 2px solid black;
+  border-bottom: 1px solid #dedede;
+  position: relative;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  color: #818181; }
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 5.4vw;
+  left: 0;
+  background-color: white;
+  border: 1px solid black;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px; }
+
+.favorite-item-list {
   width: 100%;
   margin-top: 5%;
   margin-bottom: 5%;
-  padding: 10px; }
+  padding: 10px;
+  display: block; }
 
-.wlist-product {
-  border: 2px solid greenyellow; }
+.sidenav li {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s; }
+
+.sidenav a:hover {
+  color: #f1f1f1; }
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px; }
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px; }
+  .sidenav a {
+    font-size: 18px; } }
 
 /*-----------------------MEDIA QUERIES--------------------------------*/
 @media screen and (min-width: 600px) {
   .wishlist-page {
     background-color: #f3eae2;
-    padding-bottom: 30px; }
-  .wishlist-page-container {
-    max-width: 1100px;
-    width: 80vw;
-    background-color: white;
-    padding: 30px;
-    height: 400vw; } }
+    padding-bottom: 30px; } }
