--- a/css/main.css
+++ b/css/main.css
@@ -111,8 +111,7 @@
 
 .action-buttons {
   color: #747474;
-  margin: 12px;
-  font-size: 28px; }
+  margin: 1vw; }
 
 .cart-button:hover {
   cursor: pointer; }
@@ -570,7 +569,8 @@ body {
     padding: 20px; } }
 
 .cart-flex {
-  padding: 3vw; }
+  padding: 3vw;
+  background-color: #f3eae2; }
 
 .cart-box {
   text-align: center;
@@ -580,29 +580,63 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   min-width: 60vw;
-  min-height: 30vw; }
-
-.rubriker {
-  background-color: black;
-  color: pink; }
+  height: auto; }
 
 .cart-item {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-between;
+  text-align: left;
+  align-items: center;
+  margin-top: 2vw; }
+
+.avskiljare {
+  margin-top: 2vw; }
 
 h2 {
   font-size: 2.5vw; }
 
 h4 {
-  font-size: 2vw; }
+  font-size: 1vw; }
 
 .item-name {
   font-weight: bold; }
 
 .totalSumma {
   font-weight: bold;
-  margin-top: 4vw; }
+  margin-top: 4vw;
+  font-size: 1.5vw; }
 
 .imgCart {
-  width: 4vw;
-  height: auto; }
+  width: 6vw;
+  height: auto;
+  transition: 0.5s; }
+
+.imgCart:hover {
+  transform: scale(1.6); }
+
+.removeButton {
+  background-color: white;
+  border: none;
+  cursor: pointer; }
+
+.varuCount {
+  font-size: 1vw;
+  position: absolute;
+  top: 0.3vw;
+  right: 0.3vw;
+  background-color: black;
+  color: white;
+  width: 1.2vw;
+  height: 1.2vw;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.cart-icon {
+  display: flex;
+  align-items: center;
+  position: relative; }
+
+.fa {
+  font-size: 2vw; }
