--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -11,7 +11,12 @@
   margin-left: 10%;
   padding: 1rem;
 }
-  
+
+.admin-header {
+  font-size: 26px;
+  font-weight: 800;
+}
+
 .adminForm-label {
   box-sizing: border-box;
   font-size: 18px;
@@ -39,8 +44,13 @@
 }
 
 @media screen and (max-width: 550px) {
+  .adminForm {
+    background-image: none;
+  }
   .admin-header {
-    margin: 0.7rem;
+    font-size: 24px;
+    font-weight: 700;
+    margin: 0.5rem; 
   }
   .adminForm-input {
     width: 95%;
