--- a/sass/global.scss
+++ b/sass/global.scss
@@ -3,7 +3,7 @@
 * {
     box-sizing: border-box;
     margin: 0px;
-} 
+}
 
 .header {
     position: relative;
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.4vw;
-} 
+}
 
 .header-text {
     display: flex;
@@ -127,8 +127,8 @@
 }
 .action-buttons{
     color: $text;
-    margin: 1vw;
-    
+    margin: 12px;
+    font-size: 28px;
 }
 
 
