--- a/sass/global.scss
+++ b/sass/global.scss
@@ -5,14 +5,25 @@
     margin: 0px;
 } 
 
+.info-box{
+    position: sticky;
+    top: 0px;
+    z-index: 1;
+    font-size: 12px;
+    text-align: center;
+    background-color: $mainColor-linen;
+    color: $text;
+    padding: 8px;
+}
+
 .header {
-    position: relative;
+   // position: relative;
     display: flex;
     width: 100%;
-    height: 5.4vw;
+    height: 9vw;
     justify-content: center;
     align-items: center;
-    font-size: 1.4vw;
+    //font-size: 1.4vw;
 } 
 
 .header-text {
@@ -24,17 +35,19 @@
     justify-content: center;
 }
 .header-text h2 {
-    font-size: 3vw;
+    font-size: 4vw;
     font-weight: 400;
     color: $text;
     letter-spacing: 3px;
 }
 .logo {
-    height: 4.5vw;
+    display: inline-block;
+    height: 5vw;
+    margin-left: -12px;
     margin-top: 10px;
 }
  .menu-button {
-    background-color: #000000;
+    background-color: $mainColor-linen;
     padding: 2vw;
     border: none;
     cursor: pointer;
@@ -55,7 +68,6 @@
     left: 65px;
     display: none;
     font-family: 'Open Sans', sans-serif;
-    border: 1px solid violet;
 }
 @media screen and (max-width: 660px){
     .dropdown-menu {
@@ -100,6 +112,7 @@
    margin: 15px;
    text-decoration: none;
    color: $text;
+   font-size: 2vw;
 
 }
 .topLink:link{
@@ -114,7 +127,6 @@
     text-decoration: none;
 }
 
-
 .cart-container {
     display: flex;
     align-items: center;
@@ -128,9 +140,8 @@
 .action-buttons{
     color: $text;
     margin: 1vw;
-    
+    font-size: 28px;
 }
-
 
 .cart-button:hover {
     cursor: pointer;
@@ -139,12 +150,14 @@
 .hero-container {
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 550px;
 }
 
 .image-container{
+    background-color: $mainColor-linen;
     height: 100%;
     width: 100%;  
+
 }
 
 .gallery-image{
@@ -155,16 +168,20 @@
 
 .hero-text {
     position: absolute;
-    top: 40%;
-    left: 8%;
     color: white;
-    background-color: rgb(243,234,226);
+    font-size: 42px;
+    font-family: 'Playfair Display', serif;
+    
+}
+.hero-text h1, .hero-text h4 {
+    background-color: rgba(243,234,226, 0.3);
 }
 
 .card-container {
     display: flex;
     justify-content: space-between;
     height: 320px;
+    margin-top: -5px;
     // font-family: 'Open Sans', sans-serif;
 }
 
@@ -176,26 +193,23 @@
 }
 
 .left {
-    background-image: $leftImage;
+    background-image: url(/css/images/pyramidochknut.JPG);
     background-size: cover;
     background-position: center;
 }
 
 .right {
-    background-image: $rightImage;
+    background-image: url(/css/images/pastellbubblormini.JPG);
     background-size: cover;
-    background-attachment: fixed;
-    background-position: 470px -980px;
-    // background-position: 720px -300px;
+    background-position: center;
 }
 
  .card-text {
     position: absolute;
-    left: 3%;
     width: 130px;
-    height: 140px;
-    margin-bottom: 30px;
-    margin-top: 30px;
+    height: 110px;
+    margin-top: 15vh;
+    left: 22px;
     color: white;
     background-color: rgba(243,234,226, 0.3);
 }
@@ -209,14 +223,14 @@
 } 
 
 .card-text p{
+    position: relative;
     color: white;
-    position: absolute;
-    font-size: 20px;
+    font-size: 15px;
     top: -30px;
     left: -21px;
-    padding: 10px;
-    background-color: rgba(243,234,226, 0.3);
-    writing-mode: vertical-lr;
+    width: 110px;
+    margin-top: -137px;
+    background-color: rgba(203, 243, 206, 0.3);
 }
 
 
@@ -252,7 +266,7 @@
 
 
 main {
-    background-color: $mainColor-linen;
+   // background-color: $mainColor-linen;
 }
 
 .cart-flex {
