--- a/sass/varukorg.scss
+++ b/sass/varukorg.scss
@@ -29,12 +29,11 @@ height: auto;
     margin-top: 2vw;
 }
 
-h2 {
+.cart-flex h2 {
 font-size: 2.5vw;
-
 }
 
-h4 {
+.cart-item h4 {
     font-size: 1vw;
 }
 
@@ -78,6 +77,7 @@ h4 {
     justify-content: center;
     align-items: center;
 }
+
 
 .cart-icon {
     display: flex;
