--- a/sass/wishlist.scss
+++ b/sass/wishlist.scss
@@ -4,7 +4,7 @@
   width: 0;
   position: fixed;
   z-index: 1;
-  top: 5.4vw;
+  top: 0;
   right: 0;
   background-color: white;
   overflow-x: hidden;
@@ -25,6 +25,29 @@
   width: 100%;
   margin-top: 5%;
   padding: 10px;
+}
+
+
+.heart-icon{
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.heart-icon span{
+  font-size: 1vw;
+    position: absolute;
+    top: 0.3vw;
+    right: 0.3vw;
+    background-color: black;
+    color: white;
+    width: 1.2vw;
+    height: 1.2vw;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .favorite-item{
