--- a/sass/varukorg.scss
+++ b/sass/varukorg.scss
@@ -69,8 +69,8 @@ font-size: 2.5vw;
 .varuCount {
     font-size: 1vw;
     position: absolute; 
-    top: 0.3vw;
-    right: 0.3vw;
+    top: 0.6vw;
+    right: 0vw;
     background-color: black;
     color: white;
     width: 1.2vw;
@@ -90,6 +90,8 @@ font-size: 2.5vw;
 
 .fa {
     font-size: 2vw;
+    margin: 1vw;
+
 }
 
 @media screen and (max-width: 660px) {
@@ -109,13 +111,13 @@ font-size: 2.5vw;
     .totalSumma {
         font-weight: bold;
         margin-top: 4vw;
-        font-size: 2.5vw;
+        font-size: 4vw;
     }
     h2 {
         font-size: 3vw;
         }
         .fa {
-            font-size: 3.7vw;
+            font-size: 4vw;
         }
         .varuCount {
             font-size: 2vw;
@@ -123,3 +125,7 @@ font-size: 2.5vw;
             height: 2vw;
         }
   }
+
+  .action-buttons {
+    color: #5c5c5c;
+   }
